--- a/game1.html
+++ b/game1.html
@@ -30,11 +30,11 @@
     }
     while (answer!=input1);
     if (flag){
-        message +="you guessed" +  answer + "right";
+        message +="you guessed" +" " + answer +" " + "right";
 
     }
     else {
-        message +="you guessed wrong REFRESH page to try again<br> 0 people gussed right";
+        message +="you guessed wrong REFRESH page to try again<br>1  person(s) gussed right";
 
     }
     document.write(message);
