--- a/game1.html
+++ b/game1.html
@@ -34,7 +34,7 @@
 
     }
     else {
-        message +="you guessed wrong REFRESH page to try again<br>1  person(s) gussed right";
+        message +="you guessed wrong REFRESH page to try again<br>1  person(s) guessed right";
 
     }
     document.write(message);
